--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,3 +63,12 @@
     margin-right: 6px;
     vertical-align: top;
 }
+
+/* home page css */
+
+nav{
+    padding: 8px;
+}
+.nav-content{
+    justify-content: flex-end;
+}
