--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -4,7 +4,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse nav-content" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a style="float: right;" class="nav-link  btn btn-lg btn-danger" href="#">logout</a>
