--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse nav-content" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a style="float: right;" class="nav-link  btn btn-lg btn-danger" href="#">logout</a>
+          <a style="float: right;" class="nav-link  btn btn-lg btn-danger" href="/auth/google/logout">logout</a>
         </li>
       </ul>
    
