--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,15 +1,49 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Lab Instruments Bookings</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse nav-content" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a style="float: right;" class="nav-link  btn btn-lg btn-danger" href="/auth/google/logout">logout</a>
-        </li>
-      </ul>
-   
-    </div>
-  </nav>
+  <a class="navbar-brand" href="#">Lab Instruments Bookings</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse nav-content" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <% if(user.role="admin"){ %>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Dropdown
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="#">Add Instruments</a></li>
+          <li><a class="dropdown-item" href="#">Users</a></li>
+          <li><hr class="dropdown-divider" /></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </li>
+
+      <% } %>
+
+      <li class="nav-item">
+        <a
+          style="float: right"
+          class="nav-link btn btn-lg btn-danger"
+          href="/auth/google/logout"
+          >logout</a
+        >
+      </li>
+    </ul>
+  </div>
+</nav>
