--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -24,7 +24,7 @@
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          Dropdown
+         Admin options
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
           <li><a class="dropdown-item" href="#">Add Instruments</a></li>
