--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -35,6 +35,26 @@
       </li>
 
       <% } %>
+      <% if(user.role="customer"){ %>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+           <%= user.customerName%> options
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Booked Instruments</a></li>
+            <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+  
+        <% } %>
 
       <li class="nav-item">
         <a
