--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -35,7 +35,7 @@
       </li>
 
       <% } %>
-      <% else if(user.role="customer"){ %>
+      <% if(user.role="customer"){ %>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
