--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -14,7 +14,7 @@
 
   <div class="collapse navbar-collapse nav-content" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <% if(user.role="admin"){ %>
+      <% if(user.role=="admin"){ %>
       <li class="nav-item dropdown">
         <a
           class="nav-link dropdown-toggle"
@@ -35,7 +35,7 @@
       </li>
 
       <% } %>
-      <% if(user.role="customer"){ %>
+      <% if(user.role=="customer"){ %>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
