--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -27,7 +27,7 @@
          Admin options
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="#">Add Instruments</a></li>
+          <li><a class="dropdown-item" href="/admin/add-instrumnets">Add Instruments</a></li>
           <li><a class="dropdown-item" href="#">Users</a></li>
           <li><hr class="dropdown-divider" /></li>
           <li><a class="dropdown-item" href="#">Something else here</a></li>
