--- a/views/add-instruments.ejs
+++ b/views/add-instruments.ejs
@@ -12,7 +12,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <!-- <link rel="stylesheet" href="/css/main.css" /> -->
+    <link rel="stylesheet" href="/css/main.css" />
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -23,25 +23,30 @@
   </head>
   <body>
     <%- include("navbar") %>
-  <div>
-    <form action="">
-      <div class="row mb-3">
-        <label for="inputInstrumentName" class="col-sm-2 col-form-label">Instrument Name</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" id="inputInstrumentName">
-        </div>
-        <div class="row mb-3">
-          <label for="inputNoOfInstrumentsAvailable" class="col-sm-2 col-form-label">Number Of Instruments</label>
-          <div class="col-sm-10">
-            <input type="number" class="form-control" id="inputNoOfInstrumentsAvailable">
-          </div>
-          <div class="row mb-3">
-            <label for="inputInstrumentSourceLink" class="col-sm-2 col-form-label">Image Source Link of Instrument</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputInstrumentSourceLink">
-            </div>
-            <button type="submit" class="btn btn-success">Validate</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
+  <div id="form-div">
+    <form class="row g-3">
+      <div class="col-md-6">
+        <label for="inputInstrumentSourceLink" class="form-label">Instrument Image Source Link</label>
+        <input type="text" class="form-control" id="inputInstrumentSourceLink">
+      </div>
+      <div class="col-md-6">
+        <button type="submit" class="btn btn-primary">Validate</button>
+      </div>
+      <div class="col-12">
+        <label for="inputInstrumentName" class="form-label">Instrument Name</label>
+        <input type="text" class="form-control" id="inputInstrumentName" placeholder="Ex : Microscrope">
+      </div>
+      <div class="col-12">
+        <label for="inputNumberOfInstruments" class="form-label">Number Of instruments</label>
+        <input type="text" class="form-control" id="inputNumberOfInstruments" placeholder="Ex : 3">
+      </div>
+      <div class="col-md-6">
+        <label for="inputCity" class="form-label">City</label>
+        <input type="text" class="form-control" id="inputCity">
+      </div>
+      <div class="col-12">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
     </form>
   </div>
   
