--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,7 +75,7 @@ nav{
 
 /* add instruments css */
 
-.form-div {
+#form-div {
     max-width: 50%;
     margin-left: auto;
     margin-right: auto;
