--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,8 +75,13 @@ nav{
 
 /* add instruments css */
 
-#form-div {
+/* #form-div {
     max-width: 50%;
     margin-left: auto;
     margin-right: auto;
+} */
+
+.image-source-link{
+    display: flex;
+    justify-content: center;
 }
