--- a/views/add-instruments.ejs
+++ b/views/add-instruments.ejs
@@ -35,29 +35,29 @@
           </div>
           <button id="submitButton" class="btn btn-primary mb-2">Validate</button>
         </div>
-        <div class="col-12">
-          <label for="inputInstrumentName" class="form-label"
-            >Instrument Name</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="inputInstrumentName"
-            placeholder="Ex : Microscrope"
-          />
+        <div class="image-source-link">
+          <div class="form-group mx-sm-3 mb-2 image-source-subdiv">
+            <input
+              type="text"
+              class="form-control"
+              id="inputInstrumentName"
+              placeholder="Instrument Name :"
+            />
+          </div>
         </div>
-        <div class="col-12">
-          <label for="inputNumberOfInstruments" class="form-label"
-            >Number Of instruments</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="inputNumberOfInstruments"
-            placeholder="Ex : 3"
-          />
+        <div class="image-source-link">
+          <div class="form-group mx-sm-3 mb-2 image-source-subdiv">
+            <input
+              type="number"
+              class="form-control"
+              id="inputNumberOfInstruments"
+              placeholder="Number Of Instruments :"
+            />
+          </div>
         </div>
-        <div class="col-12">
+
+       
+        <div class="col-12 image-source-link">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
