--- a/views/add-instruments.ejs
+++ b/views/add-instruments.ejs
@@ -7,6 +7,13 @@
     <title>Add Instruments</title>
     <!-- CSS only -->
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+      integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -33,7 +40,9 @@
               placeholder="Instrument Image Link"
             />
           </div>
-          <button id="submitButton" class="btn btn-primary mb-2">Validate</button>
+          <button id="validateButton" class="btn btn-primary mb-2">
+            Validate
+          </button>
         </div>
         <div class="image-source-link">
           <div class="form-group mx-sm-3 mb-2 image-source-subdiv">
@@ -56,11 +65,24 @@
           </div>
         </div>
 
-       
         <div class="col-12 image-source-link">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
     </div>
+
+    <!-- js -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
+      integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="/js/sign.js"></script>
   </body>
 </html>
