--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,27 @@
   </head>
   <body>
     <%- include("navbar") %>
-   
+     <div class="container">
+       <div class="row">
+
+        <div class="col-lg-4 col-md-3 col-sm-12">
+        <%  category.forEach(function(category){ %>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="<%= category.categoryImage %>" alt="Card image cap" load="lazy">
+            <div class="card-body">
+            
+              <h5 class="card-title"><%= category.categoryName.replace(/\w/, c => c.toUpperCase()) %></h5>
+              <p class="card-text">Click below button to see number of instruments of this type available to book</p>
+              <a href="/<%= category._id %>" class="btn btn-primary">See More </a>
+            </div>
+       <%   }) %>
+          </div>
+        </div>
+
+       </div>
+
+     </div>
+     
   
   </body>
 </html>
