--- a/public/css/main.css
+++ b/public/css/main.css
@@ -83,3 +83,10 @@ nav{
     display: flex;
     justify-content: center;
 }
+
+/* instrument css */
+.card {
+    margin: 0 auto; /* Added */
+    float: none; /* Added */
+    margin-bottom: 10px; /* Added */
+}
