--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Lab Instruments Bookings</a>
+  <a class="navbar-brand" href="/">Lab Instruments Bookings</a>
   <button
     class="navbar-toggler"
     type="button"
