--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -48,6 +48,7 @@
                   <label for="end_time">End Time</label>
                 </div>
               </div>
+              <input name="instrumentId" style="display: none;" value="<%= itemToBeBooked._id %>">
               <div style="display: flex;justify-content: center;padding: 20px;">
                 <button class="btn waves-effect waves-light" type="submit" name="action">
                     <i class="material-icons right">send</i> Book
