--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,8 +75,16 @@ nav{
 
 /* add instruments css */
 
-#form-div {
- margin-top: 20px;
+.container-fluid{
+    margin-top: 20px;
+}
+
+.dynamicDivs{
+    margin: auto;
+
+}
+.submit-data{
+    text-align: center;
 }
 
 .image-source-link{
@@ -89,4 +97,42 @@ nav{
     margin: 0 auto; /* Added */
     float: none; /* Added */
     margin-bottom: 10px; /* Added */
+}
+
+/* home page css */
+
+
+.height {
+    height: 100vh
+}
+
+.search {
+    position: relative;
+    box-shadow: 0 0 40px rgba(51, 51, 51, .1)
+}
+
+.search input {
+    height: 60px;
+    text-indent: 25px;
+    border: 2px solid #d6d4d4
+}
+
+.search input:focus {
+    box-shadow: none;
+    border: 2px solid blue
+}
+
+.search .fa-search {
+    position: absolute;
+    top: 20px;
+    left: 16px
+}
+
+.search button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    height: 50px;
+    width: 110px;
+    background: blue
 }
