--- a/views/add-instruments.ejs
+++ b/views/add-instruments.ejs
@@ -6,85 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Instruments</title>
     <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     <link rel="stylesheet" href="/css/main.css">
 
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/main.css" />
-    <!-- JavaScript Bundle with Popper -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
+      integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     ></script>
-    <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
-    integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
-    integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+      integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
   </head>
   <body>
     <%- include("navbar") %>
-    <div id="form-div">
-      <form class="row g-3" action="/admin/add-instrument" method="POST">
-        <div class="image-source-link">
-          <div class="form-group mx-sm-3 mb-2 image-source-subdiv">
-            <input
-              type="text"
-              class="form-control"
-              id="inputImageSourceLink"
-              placeholder="Instrument Image Link"
-            />
-          </div>
-        </div>
-        <div class="image-source-link">
-          <div class="form-group mx-sm-3 mb-2 image-source-subdiv">
-            <input
-              type="text"
-              class="form-control"
-              id="inputInstrumentName"
-              placeholder="Instrument Name :"
-            />
-          </div>
-        </div>
-        <div class="image-source-link">
-          <div class="form-group mx-sm-3 mb-2 image-source-subdiv">
-            <input
-              type="number"
-              class="form-control"
-              id="inputNumberOfInstruments"
-              placeholder="Number Of Instruments :"
-            />
-          </div>
-        </div>
 
-        <div class="col-12 image-source-link">
-          <button id="submitButton" type="submit" class="btn btn-primary">
-            Submit
-          </button>
-        </div>
-      </form>
+  <div class="row g-3 container-fluid">
+    <div class="col">
+      <input id="categoryName" required type="text" class="form-control" placeholder="Category" aria-label="Category Name">
     </div>
+    <div class="col">
+      <input id="numberOfInstruments" required type="number" class="form-control" placeholder="Number of Instruments" aria-label="Number of Instruments">
+    </div>
+    <div class="col-12">
+      <label for="inputImageSourceLink" class="form-label">Image Link :</label>
+      <input required type="text" class="form-control" id="inputImageSourceLink" placeholder="https://domain/instrument.webp">
+    </div>
+  
+  </div>
+  <div class="col-12 d-flex my-2 justify-content-center">
+    <button id="continueButton" class="btn btn-primary">Continue</button>
+  </div>
+
+<form id="dynamic-form-inputs">
+<div id="generatedInputFields">
+
+</div>
+</form>
+  
 
     <!-- js -->
+    <!-- <script src="/js/jquery.min.js"></script> -->
+    <script  src="/js/sign.js"></script>
 
-    <script src="/js/sign.js"></script>
   </body>
 </html>
