--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -30,7 +30,7 @@
         </li>
       </ul>
       <form class="d-flex">
-        <a role="button" class="btn btn-outline-success" type="submit">Log Out</a>
+        <a href="/user/google/logout" role="button" class="btn btn-outline-success" type="submit">Log Out</a>
       </form>
     </div>
   </div>
