--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta name="google-signin-client_id" content="779212046974-gbs0leuvj9mfobbpthl8d5ak8uedqd6m.apps.googleusercontent.com"> -->
     <title>lab instruments booking</title>
+    <link rel="stylesheet" href="/css/jquery-clockpicker.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
      <link rel="stylesheet" href="/css/jquery-ui.min.css">
@@ -17,12 +18,12 @@
     <%- include("navbar") %>
     
     <div class="container">
-    <form action="" method="post">
+    <form action="" method="post" id="availabilityCheckForm">
       <div class="row height d-flex justify-content-center align-items-center">
         <div class="col-md-8">
             <div class="search">
                <i class="fa fa-search"></i>
-                <input required list="category" type="text" class="form-control" placeholder="Search Instrument To Book">  
+                <input id="searchInput" required list="category" type="text" class="form-control" placeholder="Search Instrument To Book">  
                 <datalist id="category">
             <% for(let i=0;i<result.length;i++){ %>
               <option value="<%= result[i] %>">
@@ -34,16 +35,16 @@
             <div class="col my-2 mx-2">
               <input id="datepicker" required type="text" class="form-control" placeholder="Pick Date">
             </div>
-            <div class="col my-2 mx-2">
-              <input id="starttime" required type="text" class="form-control" placeholder="Pick Start Time">
+            <div class="col my-2 mx-2 input-group startTimePicker">
+              <input id="starttime" required type="text" class="form-control" placeholder="Start Time (24 hr Format)">
             </div>
            </div>
            <div class="form-row d-flex" >
-            <div class="col my-2 mx-2">
-              <input id="endtime" required type="text" class="form-control" placeholder="Pick End Time">
+            <div class="col my-2 mx-2 input-group">
+              <input id="endtime" required type="text" class="form-control" placeholder="End Time (24 hr Format)">
             </div>
             <div class="col my-2 mx-2">
-              <button class="btn btn-md btn-primary">Check Availability</button>
+              <button type="submit" class="btn btn-md btn-primary">Check Availability</button>
             </div>
            </div>
               
@@ -54,6 +55,7 @@
   </div>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/jquery-ui.min.js"></script> 
+    <script src="/js/jquery-clockpicker.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="/js/home.js"></script>
