show-available-items

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,18 +49,14 @@
            </div>
               
         </div>
+
+      
      
     </div>
     </form>
-    <div class="row d-flex">
-      <div class="col  mx-2">
-       <a role="button" class="btn btn-md btn-success" href="http://">OK</a>
- 
-      </div>
+    <div class="row d-flex" id="attach-available-items">
+    
     </div>
-  </div>
-  <div class="container-fluid" id="attach-available-items">
-
   </div>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/jquery-ui.min.js"></script> 
