--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,6 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed">
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Book Instruments</a>
+    <a  class="navbar-brand" href="/">
+      <img style="max-height: 40px;" src="/images/logo.svg" alt="logo">
+    </a>
+
+    <!-- <a class="navbar-brand" href="#">Book Instruments</a> -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,7 +23,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/admin/add-instruments">Add Instruments</a></li>
-              <li><a class="dropdown-item" href="#">Manage Users</a></li>
+              <li><a class="dropdown-item" href="/admin/manage-instruments">Manage Instruments</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
@@ -30,7 +34,7 @@
         </li>
       </ul>
       <form class="d-flex">
-        <a href="/user/google/logout" role="button" class="btn btn-outline-success" type="submit">Log Out</a>
+        <a href="/user/google/logout" role="button" class="btn btn-dark" type="submit">Log Out</a>
       </form>
     </div>
   </div>
