--- a/views/admin/add-instruments.ejs
+++ b/views/admin/add-instruments.ejs
@@ -27,7 +27,7 @@
 
   </head>
   <body>
-    <%- include("navbar") %>
+    <%- include("../navbar") %>
 
   <div class="row g-3 container-fluid">
     <div class="col">
