--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary navbar-fixed">
   <div class="container-fluid">
     <a  class="navbar-brand" href="/">
       <img style="max-height: 40px;" src="/images/logo.svg" alt="logo">
