--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,6 +30,10 @@
              <%} %>
                 </datalist>
               </div>
+
+              <p id="errorMsg" class="my-2" style="text-align: center;color: orangered;font-weight: bold;">
+              
+              </p>
              
            <div class="form-row d-flex" >
             <div class="col my-2 mx-2">
