--- a/public/css/main.css
+++ b/public/css/main.css
@@ -171,3 +171,23 @@ nav{
     background: #FC5404;
     border-color: #FFC074;
 }
+
+/* manage users css */
+table { 
+    width: 100%; 
+    border-collapse: collapse; 
+  }
+  /* Zebra striping */
+  tr:nth-of-type(odd) { 
+    background: #eee; 
+  }
+  th { 
+    background: #333; 
+    color: white; 
+    font-weight: bold; 
+  }
+  td, th { 
+    padding: 6px; 
+    border: 1px solid #ccc; 
+    text-align: left; 
+  }
