--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -25,7 +25,7 @@
               <li><a class="dropdown-item" href="/admin/add-instruments">Add Instruments</a></li>
               <li><a class="dropdown-item" href="/admin/manage-instruments">Manage Instruments</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="/admin/manage-users">Manage Users</a></li>
             </ul>
       <%    } %>
         </li>
