--- a/views/admin/manage-users.ejs
+++ b/views/admin/manage-users.ejs
@@ -15,13 +15,25 @@
 </head>
 <body>
     <%- include("../navbar") %>
-  
+  <div  style="padding: 10px;text-align: center;">
+     <h2>Users Count : <%= users.length %></h2>
+     <% let count=0 ; %>
+   <%  for(let x=0;x<users.length;x++){ %>
+       <%  if(users[x].role==="admin"){ %>
+           <%  count = count + 1 ; %>
+      <%   } %>
+  <%   } %>
+     <div>
+        <h3>Admin Users : <%= count %> </h3>
+     </div>
+  </div>
     <table>
         <thead>
     <tr>
 		<th>Name</th>
 		<th>Mail</th>
 		<th>Role</th>
+        <th>Modify Role</th>
 	</tr>
 	</thead>
 	<tbody>
@@ -29,7 +41,16 @@
     <tr>
 		<td><%= users[i].customerName%></td>
 		<td> <%= users[i].gmail %></td>
-		<td> <%=users[i].role %></td>
+		<td> <%=users[i].role %> </td>
+        <td>  <%   if(users[i].role != "admin"){ %>
+            <span>
+                <a class="mx-2 btn btn-md btn-primary" href="/admin/make-admin/<%=users[i]._id%>" > Make Admin</a>
+             </span>
+         <%  }else{ %>
+            <span>
+                <a class="mx-2 btn btn-md btn-primary" href="/admin/remove-admin/<%=users[i]._id%>" > Remove Admin</a>
+             </span>
+      <%   } %></td>
 	</tr>
  <%   } %>
 
