--- a/views/admin/manage-users.ejs
+++ b/views/admin/manage-users.ejs
@@ -26,6 +26,9 @@
      <div>
         <h3>Admin Users : <%= count %> </h3>
      </div>
+    <% if(messages.info){ %>
+      <p style="color: orangered;font-weight: bold;"><%= messages.info %></p>
+   <%  } %>
   </div>
     <table>
         <thead>
@@ -43,13 +46,15 @@
 		<td> <%= users[i].gmail %></td>
 		<td> <%=users[i].role %> </td>
         <td>  <%   if(users[i].role != "admin"){ %>
-            <span>
-                <a class="mx-2 btn btn-md btn-primary" href="/admin/make-admin/<%=users[i]._id%>" > Make Admin</a>
-             </span>
+           <form class="make-admin" action="/admin/make-admin" method="post">
+             <input name="userId" style="display: none;" value="<%=users[i]._id%>">
+            <button class="mx-2 btn btn-md btn-primary" type="submit" > Make Admin</button>
+           </form>
          <%  }else{ %>
-            <span>
-                <a class="mx-2 btn btn-md btn-primary" href="/admin/remove-admin/<%=users[i]._id%>" > Remove Admin</a>
-             </span>
+             <form class="remove-admin" action="/admin/remove-admin" method="post">
+              <input name="userId" style="display: none;" value="<%=users[i]._id%>">
+              <button class="mx-2 btn btn-md btn-primary" type="submit" > Remove Admin</button>
+            </form>
       <%   } %></td>
 	</tr>
  <%   } %>
@@ -65,6 +70,8 @@
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"
-  ></script>  
+  ></script> 
+  <script src="/js/external-js/jquery.min.js"></script>
+  <script src="/js/admin-1.js"></script> 
 </body>
 </html>
