--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -24,6 +24,7 @@
               <li><a class="dropdown-item" href="/admin/manage-instruments">Manage Instruments</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="/admin/manage-users">Manage Users</a></li>
+              <li><a class="dropdown-item" href="/admin/manage-bookings">Manage Bookings</a></li>
             </ul>
       <%    } %>
         </li>
